2007-01-27  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12389
        Chinese decoding error at hk.antispam.yahoo.com

        * fast/encoding/noscript-in-head-expected.txt: Added.
        * fast/encoding/noscript-in-head.html: Added.

2007-01-25  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Added test for <rdar://problem/4608404> WebScriptObject's _rootObject lack 
        of ownership policy causes crashes (e.g., in Dashcode)
        
        No test for Java or NPP versions of this bug because there's no reliable way to
        make Java and NPP objects outlive their RootObjects (although Java objects
        sometimes do).

        * plugins/root-object-premature-delete-crash-expected.txt: Added.
        * plugins/root-object-premature-delete-crash.html: Added.

2007-01-27  Andrew Wellington  <proton@wiretapped.net>

        Reviewed by Maciej.
        
        Test for "Repeated string concatenation results in OOM crash"
        http://bugs.webkit.org/show_bug.cgi?id=11131

        * fast/js/resources/string-concatenate-outofmemory.js: Added.
        * fast/js/string-concatenate-outofmemory-expected.txt: Added.
        * fast/js/string-concatenate-outofmemory.html: Added.

2007-01-26  Darin Adler  <darin@apple.com>

        Reviewed by Beth.

        - updated test results for change to computed style

        * editing/pasteboard/paste-table-002-expected.txt:
        Updated for change to order of style properties.

        * fast/css/computed-style-expected.txt:
        Updated for change to order of style properties and to add new ones.

2007-01-26  Alice Liu  <alice.liu@apple.com>

        Reviewed by Ada.

        Added tests for <rdar://problem/4919097> REGRESSION: Ctrl-Y fails to yank (11076)

        * editing/pasteboard/emacs-ctrl-a-k-y-expected.checksum: Added.
        * editing/pasteboard/emacs-ctrl-a-k-y-expected.png: Added.