@@ -1,0 +1,16 @@
+<html>
+    <head>
+        <title>Oversized list marker</title>
+        <style type="text/css">
+            ul {
+                border: 10px dashed black;
+            }
+        </style>
+    </head>
+    <body>
+        <p>This tests that the size of the list marker is not effected by the width of the border.  See bug #11957</p>
+        <ul>
+            <li>The list-marker should be the normal size.</li>
+        </ul>
+    </body>
+</html>
